# libauritext

./: .gitignore  CMakeLists.txt  README.md  auriText.c  auriText.h
.github/workflows/: build.yml
Fonts/: CharacterList.txt  README.md  makeFontSheet.sh  makeZip.sh
example/: CMakeLists.txt  comIO.h  main.c
